# youtube-mcp-server-with-fastmcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: __init__.py  app.py
src/services/: __init__.py  youtube_service.py
src/tools/: generate_title.py  search_videos.py  search_youtube_channel.py
src/utils/: __init__.py  icons.py
