[tool.poetry]
name = "youtube-mcp-server-with-fastmcp"
version = "0.1.0"
description = ""
authors = ["Gisela Torres"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "2.14.2"
google-api-python-client = "^2.187.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
